cabal-version: 3.0
name: enhanced-snake
version: 0.1.0.0
license: BSD-3-Clause
author: Akshaya
maintainer: akshbala2005@gmail.com

executable enhanced-snake
    main-is: Main.hs
    hs-source-dirs: app
    build-depends: 
        base ^>=4.18.0.0,
        random >=1.2,
        ansi-terminal >=0.11,
        async >=2.2,
        stm >=2.5,
        time
    default-language: Haskell2010
    ghc-options: -threaded -rtsopts